# generative-mouse-trajectories

./: .gitignore  README.md  setup.py
.github/workflows/: rust.yml
crates/: Cargo.toml
crates/mouse-collection-environment/: Cargo.toml  README.md
crates/mouse-collection-environment/example_data/: mouse_data_20250813_235208.csv
crates/mouse-collection-environment/src/: main.rs
crates/mouse-collection-environment/src/gui/: mouse_gui.rs  stylesheet.rs
crates/mouse-collector/: Cargo.toml  README.md
crates/mouse-collector/src/: lib.rs  mouse_collector.rs
crates/mouse-telemetry/: Cargo.toml  README.md
crates/mouse-telemetry/src/: lib.rs  mouse_telemetry.rs
data/: mouse_data_20260118_034910.csv  mouse_data_20260203_112701.csv  mouse_data_20260206_204924.csv
lib/smartDIR/learning/data_collection/: KeyboardTimeSeriesCollector.py  KeyboardTimeSeriesLogger.pyw  MouseTimeSeriesCollector.py  MouseTimeSeriesLogger.pyw
python/demo/: demo_gui.py
python/learning/: RecurrentGAN.py
rust/mouse-collection-environment/: Cargo.toml
rust/mouse-collection-environment/src/: main.rs  mouse_collector.rs  mouse_gui.rs
rust/mouse-collection-environment/src/gui/: mouse_gui.rs  stylesheet.rs
smartDIR/: setup.py
smartDIR/collect/: KeyboardTimeSeriesLogger.pyw
smartDIR/learning/GANs/: RecurCGAN.py
smartDIR/mouse_kb_collectors/: KeyboardActivityLogger.py
smartDIR/src/: CMakeLists.txt  main.c
smartDIR/src.py/: MouseActivityLogger.py
smartDIR/src/collection/: MouseActivityLogger.c
smartDIR/src/include/: KeyboardActivityLogger.h  MouseActivityLogger.h
