[package]
name = "mouse-collector"
version = "0.2.0"
authors = ["jrcalgo <jacksonr121@outlook.com>"]
description = "Mouse collector for capturing mouse data"
repository = "https://github.com/jrcalgo/generative-mouse-trajectories"
documentation = "https://docs.rs/crate/mouse-collector"
readme = "README.md"
keywords = ['mouse', 'input', 'telemetry', 'data-collection', 'analytics']
categories = ['accessibility', 'development-tools', 'asynchronous']
license = "MIT"
edition = "2024"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
winit = "0.30.9"
csv = "1.3.1"
chrono = "0.4.40"