[package]
name = "mouse-telemetry"
version = "0.2.0"
authors = ["jrcalgo <jacksonr121@outlook.com>"]
description = "Captures mouse data and computes derived metrics for downstream analysis/tasks"
repository = "https://github.com/jrcalgo/generative-mouse-trajectories"
documentation = "https://docs.rs/crate/mouse-telemetry"
readme = "README.md"
keywords = ['mouse', 'input', 'telemetry', 'data-collection', 'analytics']
categories = ['science', 'accessibility', 'development-tools', 'asynchronous']
license = "MIT"
edition = "2024"

[dependencies]
tokio = { version = "1.49.0", features = ["full"] }
winit = "0.30.9"
csv = "1.3.1"
chrono = "0.4.40"
