[package]
name = "mouse-collection-environment"
version = "0.1.0"
authors = ["jrcalgo <jacksonr121@outlook.com>"]
edition = "2024"
description = "Collection environment executable for generating computer mouse trajectories in a downstream task"
keywords = ['collection', 'mouse-data', 'mouse-trajectories', 'environment']
categories = ['accessibility', 'development-tools']
license = "MIT"

[dependencies]
tokio = { version = "1.44.1", features = ["full"] }
winit = "0.30.9"
iced = { version = "0.13.1", features = ["canvas"]}
iced_graphics = "0.13.0"
iced_native = "0.10.3"
iced_style = "0.12.1"
rand = "0.9.0"
csv = "1.3.1"
chrono = "0.4.40"

[profile.release]
opt-level = 1